--- a/index.html
+++ b/index.html
@@ -8,10 +8,11 @@
     <title>Cameron Pittman: Portfolio</title>
 
     <!-- Hmm, what is the impact of web fonts on speed? Measure it... -->
-    <link href="//fonts.googleapis.com/css?family=Open+Sans:400,700" rel="stylesheet">
+    <!-- <link href="//fonts.googleapis.com/css?family=Open+Sans:400,700" rel="stylesheet" media="none" onload="if(media!='all')media='all'"> -->
 
-    <link href="css/style.css" rel="stylesheet">
-    <link href="css/print.css" rel="stylesheet">
+    <link href="css/style.css" rel="stylesheet" media="all">
+    <link href="css/print.css" rel="stylesheet" media="print">
+    <link href="css/smartphone-portrait.css" rel="stylesheet" media="orientation:portrait">
 
     <script>
       (function(w,g){w['GoogleAnalyticsObject']=g;
@@ -21,8 +22,11 @@
       ga('create', 'UA-XXXX-Y');
       ga('send', 'pageview');
     </script>
-    <script src="http://www.google-analytics.com/analytics.js"></script>
+    <script async src="http://www.google-analytics.com/analytics.js"></script>
     <script async src="js/perfmatters.js"></script>
+
+
+
   </head>
 
   <body>
@@ -69,4 +73,12 @@
       </footer>
     </div>
   </body>
+  <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.5.18/webfont.js"></script>
+  <script>
+   WebFont.load({
+      google: {
+        families: ['Source Sans Pro:400,600,700,400italic,700italic', 'Roboto Condensed:400,700']
+      }
+    });
+  </script>
 </html>
