--- a/index.html
+++ b/index.html
@@ -76,6 +76,7 @@
       </footer>
     </div>
   </body>
+  <!-- Better webfont loading -->
   <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.5.18/webfont.js"></script>
   <script>
    WebFont.load({
