--- a/test/pizza-critical.html
+++ b/test/pizza-critical.html
@@ -4,8 +4,10 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
+
   <link rel="stylesheet" href="css/style.min.css">
   <link rel="stylesheet" href="css/bootstrap-grid.min.css">
+
 
 
 
@@ -104,7 +106,7 @@
           </div>
           <div id="pizzaSize" class="col-md-6">Medium</div>
           <div class="col-md-12">
-            <input id="sizeSlider" type="range" min="1" max="3" value="2" step="1" onchange="resizePizzas(this.value)"></input>
+            <input id="sizeSlider" type="range" min="1" max="3" value="2" step="1" onchange="resizePizzas(this.value)">
           </div>
         </div>
         <div id="randomPizzas" class="row">
@@ -146,5 +148,4 @@
 <script type="text/javascript" src="js/main.js"></script>
 </body>
 
-</html>
 </html>
